# Codex-2.O-Eleven-Terabyte

./: .gitignore  README.md  client.py  healthcare.db  main.py  pyproject.toml  server_diabetes_master.csv  server_heart_master.csv  server_parkinsons_master.csv
client_diabetes_data/: client_diabetes_data_101005.csv  client_diabetes_data_101006.csv
client_heart_data/: client_heart_data_101005.csv
client_parkinsons_data/: client_parkinsons_data_101005.csv
