[project]
name = "codex-2-o-eleven-terabyte"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flwr>=1.23.0",
    "fpdf>=1.7.2",
    "imbalanced-learn>=0.14.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyotp>=2.9.0",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
    "streamlit-option-menu>=0.4.0",
]
